# iximiel-minimization-hub

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  main.cpp  simplexMinimizator.h  simplexNelderMeadMinimizator.h
include/: mhtestfunctions.hpp  mhutilities.hpp  simplexNelderMeadMinimizator.hpp
include/linesearches/: linesearch.hpp  linesearchBacktracking.hpp
src/: CMakeLists.txt  demoLineSearch.cxx  demoNelderMead.cxx  mhtestfunctions.cpp
